adicionado model de messages

--- a/admin_panel/templates/admin_panel/pages/finance.html
+++ b/admin_panel/templates/admin_panel/pages/finance.html
@@ -56,7 +56,7 @@
         
 
         <div class="download-report">
-            <h2>Download de Relatórios</h2>
+            <h2>Download de Relatórios</h2>           
             <div class="download-report-container">
                 <a href="{% url 'admin_panel:generate_pdf_general_report' %}" class="btn btn-download">
                     <i class="fas fa-download"></i> Relatório geral
@@ -65,6 +65,21 @@
                     <i class="fas fa-download"></i> Relatório do dia atual
                 </a>
             </div>
+
+            <h2 class="download-report-title">Download de Relatórios com data especificada</h2>
+            <div class="download-report-form-container">
+                <form action="{% url 'admin_panel:members' %}" method="GET" class="download-report-form">
+                    <div class="download-report-group">
+                        <label for="date-filter" class="download-report-label">Data do Relatório:</label>
+                        <input type="date" name="date" id="date-filter" class="download-report-input" value="{{ request.GET.date }}">
+                    </div>
+                    <div class="download-report-actions">
+                        <button class="download-report-button download-report-submit" type="submit">
+                            <i class="fas fa-download"></i> Gerar Relatório
+                        </button>
+                    </div>
+                </form>
+            </div> 
         </div>        
             
     </div>
